--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <h1>Androidの画像選択テスト</h1>
     <h2>①: accept="image/*;capture=camera</h2>
     <label for="input-1">Select an image:</label>
-    <input id="input-1" type="file" accept="image/*;capture=camera" title="Select an image from your device" />
+    <input id="input-1" type="file" accept="image/*;capture=camera"/>
 
     <h2>②: capture="camera"</h2>
     <label for="input-2">Select an image:</label>
-    <input id="input-2" type="file" accept="image/*" capture="camera" title="Select an image from your device" />
+    <input id="input-2" type="file" accept="image/*" capture="camera" />
+
+    <h2>③: accept="image/*,text/plain""</h2>
+    <label for="input-3">Select an image:</label>
+    <input id="input-3" type="file" accept="image/*,text/plain">
 </body>
 </html>
