--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Androidの画像選択テスト</h1>
-    <h2>①: accept="image/*;capture=camera</h2>
+    <h2>①: accept="image/*;capture=camera"</h2>
     <label for="input-1">Select an image:</label>
     <input id="input-1" type="file" accept="image/*;capture=camera"/>
 
@@ -15,7 +15,7 @@
     <label for="input-2">Select an image:</label>
     <input id="input-2" type="file" accept="image/*" capture="camera" />
 
-    <h2>③: accept="image/*,text/plain""</h2>
+    <h2>③: accept="image/*,text/plain"</h2>
     <label for="input-3">Select an image:</label>
     <input id="input-3" type="file" accept="image/*,text/plain">
 </body>
