--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     <h2>③: accept="image/*,text/plain"</h2>
     <label for="input-3">Select an image:</label>
     <input id="input-3" type="file" accept="image/*,text/plain">
+
+    <h2>④: accept="image/*,text/plain" capture="camera"</h2>
+    <label for="input-4">Select an image:</label>
+    <input id="input-4" type="file" accept="image/*,text/plain" capture="camera">
+
+    <h2>⑤: accept="image/*"</h2>
+    <label for="input-5">Select an image:</label>
+    <input id="input-5" type="file" accept="image/*">
 </body>
 </html>
